# simple_messeger

./: .gitignore  CMakeLists.txt  Dockerfile  plan  ports_config
src/client/: CMakeLists.txt  Dockerfile  main.cpp
src/client/client_lib/: CMakeLists.txt
src/client/client_lib/include/: client.h
src/client/client_lib/src/: CMakeLists.txt  Chat.cpp  Chat.h  Client.cpp  Client.h  Contact.cpp  Contact.h  Message.h  Messege.cpp  Messenger.cpp  Messenger.h  TextMessage.cpp  TextMessage.h
src/client/qt_gui_lib/include/: qt_gui.h
src/client/qt_gui_lib/src/: CMakeLists.txt  Window.cpp  Window.h
src/server/: CMakeLists.txt  main.cpp
src/server/server_lib/: CMakeLists.txt
src/server/server_lib/include/: server.h
src/server/server_lib/src/: CMakeLists.txt  DataBase.cpp  DataBase.h  Server.cpp  Server.h
test/: CMakeLists.txt
test/client_test/: CMakeLists.txt  main_test.cpp
test/server_test/: CMakeLists.txt  main_test.cpp  server_test.h
